# Log_aggregator_Rust

./: Cargo.toml  README.md  config.toml  logs.db  logs.json  logs.txt
src/: main.rs
static/: index.html
