[package]
name = "Log_aggregator_Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
chrono = "0.4"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json","blocking"] }
actix-files = "0.6"
futures = "0.3"
bytes="1"

[[bin]]
name = "log_generator"
path = "src/bin/log_generator.rs"


