[package]
name = "Log_aggregator_Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
bytes = "1.6"
futures = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
urlencoding="2.1"
rand="0.8"


[[bin]]
name = "log_generator"
path = "src/bin/log_generator.rs"


